文档修正.增加去掉主题版本

--- a/mirrorui/compilerconfig.json
+++ b/mirrorui/compilerconfig.json
@@ -5,5 +5,12 @@
     "minify": {
       "enabled": false
     }
+  },
+  {
+    "outputFile": "mirroruiNoTheme.css",
+    "inputFile": "stylus/indexNoTheme.styl",
+    "minify": {
+      "enabled": false
+    }
   }
 ]
