--- a/mirrorui/mirrorui.csproj
+++ b/mirrorui/mirrorui.csproj
@@ -43,6 +43,7 @@
     <Content Include="doc\basecss.html" />
     <Content Include="doc\update.html" />
     <Content Include="doc\cachepagedemo1.html" />
+    <Content Include="mirroruiNoTheme.css" />
     <Content Include="retainDeprecat\mdirbardemo.html" />
     <Content Include="doc\mnavmenudemo1.html" />
     <Content Include="js\cachepage.js" />
@@ -108,6 +109,7 @@
     <None Include="stylus\coms\forminput.styl" />
     <None Include="stylus\function\extendclass.styl" />
     <None Include="retainDeprecat\grids.styl" />
+    <None Include="stylus\indexNoTheme.styl" />
     <None Include="stylus\theme.styl" />
     <None Include="stylus\coms\range.styl" />
     <None Include="stylus\coms\btn.styl" />
